--- a/css/custom.css
+++ b/css/custom.css
@@ -47,3 +47,7 @@ ul.timeline > li:before {
 .red-text {
 	color: #990000;
 }
+
+.img-bg-banner {
+ background-image: url("uploads/banner-01.jpg");
+}
